--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -44,6 +44,11 @@ knownIntygstyper:
   - &ki080 db
   - &ki090 doi
   - &ki100 af00213
+  - &ki110 ag114
+  - &ki120 ag7804
+  - &ki111 af00251
+  - &ki130 tstrk1062
+  - &ki140 tstrk1009
 
 knownFeatures:
   - &kf010 HANTERA_FRAGOR
@@ -57,6 +62,7 @@ knownFeatures:
   - &kf090 UTSKRIFT
   - &kf100 ARBETSGIVARUTSKRIFT
   - &kf110 JS_LOGGNING
+  - &kf120 SRS
   - &kf130 HANTERA_INTYGSUTKAST_AVLIDEN
   - &kf140 UNIKT_INTYG
   - &kf150 UNIKT_INTYG_INOM_VG
@@ -66,6 +72,7 @@ knownFeatures:
   - &kf190 SEKRETESSMARKERING
   - &kf200 NOTIFICATION_DISCARD_FELB
   - &kf210 FEATURE_UNIKT_UNDANTAG_OM_SENASTE_INTYG
+  - &kf220 OAUTH_AUTHENTICATION
 
 # Aktiverade features i Webcert
 features:
@@ -91,9 +98,14 @@ features:
       - *ki050 # LISJP
       - *ki060 # LUAE_NA
       - *ki070 # LUAE_FS
-#      - *ki080 # DB
-#      - *ki090 # DOI
-#      - *ki100 # AF00213
+  #     - *ki080 # DB
+  #     - *ki090 # DOI
+  #     - *ki100 # AF00213
+  #     - *ki110 # AG114
+  #     - *ki120 # AG7804
+  #     - *ki111 # AF00213
+  #     - *ki130 # TSTRK1062
+  #     - *ki140 # TSTRK1009
   - &f030
     name: *kf030
     desc: Förnya intyg
@@ -107,6 +119,10 @@ features:
       - *ki070 # LUAE_FS
       - *ki080 # DB
       - *ki090 # DOI
+      - *ki120 # AG7804
+      - *ki130 # TSTRK1062
+      - *ki111 # AF00251
+      - *ki140 # TSTRK1009
   - &f040
     name: *kf040
     desc: Makulera intyg
@@ -122,6 +138,11 @@ features:
       - *ki080 # DB
       - *ki090 # DOI
       - *ki100 # AF00213
+      - *ki110 # AG114
+      - *ki120 # AG7804
+      - *ki111 # AF00251
+      - *ki130 # TSTRK1062
+      - *ki140 # TSTRK1009
   - &f050
     name: *kf050
     desc: Makulera intyg kräver anledning
@@ -134,6 +155,12 @@ features:
       - *ki050 # LISJP
       - *ki060 # LUAE_NA
       - *ki070 # LUAE_FS
+      - *ki100 # AF00213
+      - *ki110 # AG114
+      - *ki111 # AF00251
+      - *ki120 # AG7804
+      - *ki130 # TSTRK1062
+      - *ki140 # TSTRK1009
   - &f060
     name: *kf060
     desc: Skapa ny fråga
@@ -148,6 +175,7 @@ features:
       - *ki070 # LUAE_FS
       - *ki080 # DB
       - *ki090 # DOI
+      - *ki130 # TSTRK1062
   - &f070
     name: *kf070
     desc: Skicka intyg
@@ -163,6 +191,9 @@ features:
       - *ki080 # DB
       - *ki090 # DOI
       - *ki100 # AF00213
+      - *ki111 # AF00251
+      - *ki130 # TSTRK1062
+      - *ki140 # TSTRK1009
   - &f080
     name: *kf080
     desc: Signera skicka direkt
@@ -171,6 +202,7 @@ features:
       - *ki080 # DB
       - *ki090 # DOI
       - *ki100 # AF00213
+      - *ki140 # TSTRK1009
   - &f090
     name: *kf090
     desc: Utskrift
@@ -186,6 +218,11 @@ features:
       - *ki080 # DB
       - *ki090 # DOI
       - *ki100 # AF00213
+      - *ki110 # AG114
+      - *ki120 # AG7804
+      - *ki111 # AF00251
+      - *ki130 # TSTRK1062
+      - *ki140 # TSTRK1009
   - &f100
     name: *kf100
     desc: Arbetsgivarutskrift
@@ -197,12 +234,15 @@ features:
     name: *kf110
     desc: JS loggning
     global: true
+  - &f120
+    name: *kf120
+    desc: SRS
+    global: false
   - &f130
     name: *kf130
     desc: Hantera utkast för avlidna patienter
     global: true
     intygstyper:
-      - *ki080 # DB
       - *ki090 # DOI
   - &f140
     name: *kf140
@@ -238,6 +278,11 @@ features:
       - *ki080 # DB
       - *ki090 # DOI
       - *ki100 # AF00213
+      - *ki110 # AG114
+      - *ki120 # AG7804
+      - *ki111 # AF00251
+      - *ki130 # TSTRK1062
+      - *ki140 # TSTRK1009
   - &f180
     name: *kf180
     desc: Använd trädklättring i HSA
@@ -253,6 +298,9 @@ features:
       - *ki060 # LUAE_NA
       - *ki070 # LUAE_FS
       - *ki100 # AF00213
+      - *ki110 # AG114
+      - *ki120 # AG7804
+      - *ki111 # AF00251
   - &f200
     name: *kf200
     desc: Rensning av meddelanden av fel B
@@ -263,5 +311,22 @@ features:
     global: true
     intygstyper:
       - *ki090 # DOI
+  - &f220
+    name: *kf220
+    desc: Inloggning med OAuth
+    global: true
 
 pilots:
+  - name: TEST_PILOT
+    desc: Pilot avsedd för testsyfte
+    hsaIds:
+      - IFV1239877878-1042
+      - TSTNMT2321000156-1077
+      - TSTNMT2321000156-105N
+    activated:
+      - &pf010
+        name: *kf120
+        desc: SRS-stöd i Webcert
+        global: true
+        intygstyper:
+          - *ki050 # LISJP
