--- a/src/main/resources/texts/texterMU_AG114_v1.0.properties
+++ b/src/main/resources/texts/texterMU_AG114_v1.0.properties
@@ -1,5 +1,5 @@
 #Properties for AG114 1.0 pdf generation
 
-formId=SKL AG1-14 - Fastst\u00E4lld av Sveriges kommuner och landsting Avdelningen f\u00F6r arbetsgivarpolitik
+formId=SKL AG1-14 - Fastst\u00E4lld av Sveriges Kommuner och Landsting
 blankettId=AG114
 blankettVersion=01
