--- a/src/main/resources/texts/texterMU_AG7804_v1.0.properties
+++ b/src/main/resources/texts/texterMU_AG7804_v1.0.properties
@@ -1,5 +1,5 @@
 #Properties for AG7804 1.0 pdf generation
 
-formId=SKL AG7804 - Fastst\u00E4lld av Sveriges kommuner och landsting Avdelningen f\u00F6r arbetsgivarpolitik
+formId=SKL AG7804 - Fastst\u00E4lld av Sveriges Kommuner och Landsting
 blankettId=AG7804
 blankettVersion=01
